# GitInTheVan

./: .dockerignore  .env.example  .gitattributes  CHANGELOG.md  Dockerfile  README.md  docker-compose.mariadb.yml  docker-compose.postgres.yml  docker-compose.sqlite.yml  docker-compose.yml  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  admin_settings.py  api_key.py  audit_log.py  backup_run.py  cantrip.py  cantrip_data.py  chat_data.py  conversation_hash.py  conversation_summary.py  debug_exchange.py  endpoint.py  forbidden_word.py  linked_repo.py  lorebook.py  lorebook_entry.py  map.py  memory.py  memory_rule.py  scenario_rule.py  skill.py  tag_group.py  user.py  user_data.py  user_settings.py  verification.py
app/routers/: admin.py  api_keys.py  audit.py  auth.py  cantrips.py  debug.py  diagnostics.py  endpoints.py  forbidden_words.py  lorebook.py  maps.py  memories.py  memory_rules.py  packs.py  proxy.py  scenario_rules.py  settings.py  skills.py  summarization.py  tag_groups.py  users.py  verification.py
app/services/: admin.py  audit.py  auth.py  backup.py  budget.py  bypass.py  cantrip.py  cantrip_context.py  command_tags.py  content_guard.py  conversation.py  debug.py  deno_runner.py  deno_template.mjs  driver_callable.py  env_sync.py  firewall_check.py  forbidden_words.py  git_sync.py  group_resolver.py  jslorebook.py  log_manager.py  lorebook.py  map_pipeline.py  memory.py  migrations.py  prefill.py  proxy.py  rate_limiter.py  routing.py  safety_scanner.py  sanitization.py  scenario_summarizer.py  skills.py  ssl_manager.py  summarization.py  tagging.py  updater.py  verification.py
app/templates/: cantrip_templates.py
docs/: user-guide.html  user-guide.md
docs/examples/map/: README.html  README.md  cantrip_card_dealer.js  cantrip_money_tracker.js  cantrip_personality.js  lorebook_gambling_rules.json  map_gambling_hall.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  api.ts  app.css  stores.ts
frontend/src/lib/: CodeEditor.svelte  CollapsibleCard.svelte  TagEditModal.svelte  collapse.ts  scroll.ts
frontend/src/pages/: Admin.svelte  Cantrips.svelte  Dashboard.svelte  Debug.svelte  Endpoints.svelte  Login.svelte  Lorebooks.svelte  Maps.svelte  Memories.svelte  Packs.svelte  Settings.svelte  Skills.svelte  TagGroups.svelte  Users.svelte  Verification.svelte
scripts/: deploy-linux.sh  deploy-macos.sh  deploy-windows.bat  flow_test.py  integration_test.py  update-linux.sh  update-macos.sh  update-windows.bat
tests/: Gambling.json  conftest.py  test_auth.py  test_backup.py  test_backup_api.py  test_cantrips.py  test_command_tags.py  test_conversation.py  test_debug.py  test_driver_callable.py  test_endpoints.py  test_env_sync.py  test_failover.py  test_forbidden_words.py  test_lorebook.py  test_memories.py  test_memory_rules.py  test_migrations.py  test_phase10.py  test_phase10b.py  test_proxy.py  test_routing.py  test_safety_scanner.py  test_sanitization.py  test_scenario_rules.py  test_site_banner.py  test_skills.py  test_ssl.py  test_summarization.py  test_tag_groups.py  test_updater.py  test_verification.py
tests/fixtures/cantrips/: keyword_lorebook.js  persistent_state.js
