[project]
name = "gitinthevan"
version = "0.14.3"
description = "Self-hostable MITM LLM router/proxy for roleplay services"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "httpx==0.28.1",
    "sqlalchemy[asyncio]==2.0.50",
    "aiosqlite==0.22.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-jose[cryptography]==3.5.0",
    "bcrypt==5.0.0",
    "dulwich==1.2.6",
    "litellm==1.89.4",
]

[project.optional-dependencies]
postgres = ["asyncpg==0.30.0"]
mysql = ["aiomysql==0.2.0"]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-httpx==0.36.2",
    "httpx==0.28.1",
    "ruff==0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
